[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-toolbox.ai"
version = "0.1.0"
description = "Python SDK for agent-toolbox.ai — deterministic pre-action gates for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai", "agents", "security", "llm", "toolbox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.30",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://agent-toolbox.ai"
Documentation = "https://agent-toolbox.ai/docs"
Repository = "https://github.com/solhammer/agentoolbox"
"Bug Tracker" = "https://github.com/solhammer/agentoolbox/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_toolbox*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
